--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -30,6 +30,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>v1.236.293 2023 Oct 17</u></b>
+<ul style="margin:0;">
+  <li>fix removal of temporary materials in run from line</li>
+</ul>
+
 <br><b><u>v1.236.292 2023 Oct 09</u></b>
 <ul style="margin:0;">
   <li>fix 5th axis buttons </li>
