qtplasmac: fix power button styling

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -30,6 +30,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>v1.236.295 2023 Oct 21</u></b>
+<ul style="margin:0;">
+  <li>fix power button styling</li>
+</ul>
+
 <br><b><u>v1.236.294 2023 Oct 18</u></b>
 <ul style="margin:0;">
   <li>fix case switching in run from line</li>
