--- a/configs/sim/axis/plasma/plasmac2/versions.html
+++ b/configs/sim/axis/plasma/plasmac2/versions.html
@@ -7,6 +7,11 @@
 <!--- ****** ADD NEXT VERSION BELOW THESE LINES ****** --->
 <!--- ****** THE MAJOR VERSION WILL ALWAYS BE 2 ****** --->
 <!--- ------------------------------------------------ --->
+<br><b>v2.10</b> 2023 Oct 23
+<ul style="margin:0;">
+    <li>fix zoom with right click</li>
+</ul>
+
 <br><b>v2.9</b> 2023 Sep 22
 <ul style="margin:0;">
     <li>changes to modules for consistency</li>
