plasmac2: add x/y offsets for pierce only mode

--- a/configs/sim/axis/plasma/plasmac2/versions.html
+++ b/configs/sim/axis/plasma/plasmac2/versions.html
@@ -7,6 +7,11 @@
 <!--- ****** ADD NEXT VERSION BELOW THESE LINES ****** --->
 <!--- ****** THE MAJOR VERSION WILL ALWAYS BE 2 ****** --->
 <!--- ------------------------------------------------ --->
+<br><b><u>v2.12</b> 2023 Oct 31</u>
+<ul style="margin:0;">
+  <li>add x/y offsets for pierce only mode</li>
+</ul>
+
 <br><b><u>v2.11</b> 2023 Oct 28</u>
 <ul style="margin:0;">
   <li>add adjustable x/y axes velocity for offset probing</li>
