--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -30,6 +30,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>v1.236.297 2023 Oct 31</u></b>
+<ul style="margin:0;">
+  <li>prevent extra temporary material addition from conversational</li>
+</ul>
+
 <br><b><u>v1.236.296 2023 Oct 28</u></b>
 <ul style="margin:0;">
   <li>fix imperial cut parameter ranges</li>
