qtplasmac: allow negative pierce only offsets

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -30,6 +30,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>v1.237.299 2023 Oct 31</u></b>
+<ul style="margin:0;">
+  <li>allow negative pierce only offsets</li>
+</ul>
+
 <br><b><u>v1.237.298 2023 Oct 31</u></b>
 <ul style="margin:0;">
   <li>add x/y offsets for pierce only mode</li>
