qtplasmac: add dual code user button

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -30,6 +30,12 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>v1.237.301 2023 Oct 04</u></b>
+<ul style="margin:0;">
+  <li>add dual code user button</li>
+  <li>allow alternate text on toggle halpin button</li>
+</ul>
+
 <br><b><u>v1.237.300 2023 Oct 31</u></b>
 <ul style="margin:0;">
   <li>prevent extra temporary material addition from conversational</li>
