qtplasmac: fix translation error in pmx485_check
allow grid in P view

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -30,6 +30,13 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>v1.236.298 2023 Nov 4</u></b>
+<ul style="margin:0;">
+  <li>fix translation in pmx485_check</li>
+  <li>allow grid in P view</li>
+</ul>
+<i>Changes submitted by snowgoer540 (Greg Carl)</i><br>
+
 <br><b><u>v1.236.297 2023 Oct 31</u></b>
 <ul style="margin:0;">
   <li>prevent extra temporary material addition from conversational</li>
