--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -30,6 +30,13 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>v1.237.302 2023 Nov 04</u></b>
+<ul style="margin:0;">
+  <li>fix translation in pmx485_check</li>
+  <li>allow grid in P view</li>
+</ul>
+<i>Changes submitted by snowgoer540 (Greg Carl)</i><br>
+
 <br><b><u>v1.237.301 2023 Oct 04</u></b>
 <ul style="margin:0;">
   <li>add dual code user button</li>
