plasmac2:  add dual code user button
allow alternate text on toggle halpin button
make dro overlay transparent
fix help/about text
allow negative x/y pierce offsets

--- a/configs/sim/axis/plasma/plasmac2/versions.html
+++ b/configs/sim/axis/plasma/plasmac2/versions.html
@@ -7,6 +7,15 @@
 <!--- ****** ADD NEXT VERSION BELOW THESE LINES ****** --->
 <!--- ****** THE MAJOR VERSION WILL ALWAYS BE 2 ****** --->
 <!--- ------------------------------------------------ --->
+<br><b><u>v2.13</b> 2023 Nov 05</u>
+<ul style="margin:0;">
+  <li>add dual code user button</li>
+  <li>allow alternate text on toggle halpin buttonq</li>
+  <li>make dro overlay transparent</li>
+  <li>fix help/about text</li>
+  <li>allow negative x/y pierce offsets</li>
+</ul>
+
 <br><b><u>v2.12</b> 2023 Oct 31</u>
 <ul style="margin:0;">
   <li>add x/y offsets for pierce only mode</li>
