qtplasmac: fix gcode filter comments error

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>236.300 2023 Nov 07</u></b>
+<ul style="margin:0;">
+  <li>fix gcode filter comments error</li>
+</ul>
+
 <br><b><u>236.299 2023 Nov 05</u></b>
 <ul style="margin:0;">
   <li>rework versioning due to master branch diverging</li>
