--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>001.011 2023 Nov 16</u></b>
+<ul style="margin:0;">
+  <li>convert project to f strings</li>
+</ul>
+
 <br><b><u>001.010 2023 Nov 07</u></b>
 <ul style="margin:0;">
   <li>fix gcode filter comments error</li>
