Fix SyntaxWarning: invalid escape sequence '\{'
 Fixes the following syntax warning on python 3.12:

 /usr/share/qtvcp/screens/qtplasmac_4x3/qtplasmac_4x3_handler.py:4016:
  SyntaxWarning: invalid escape sequence '\{'
   commands = f"{data[1]}\{data[3]}"
 /usr/share/qtvcp/screens/qtplasmac_4x3/qtplasmac_4x3_handler.py:4804:
  SyntaxWarning: invalid escape sequence '\{'
   msgs = f'{msg0}.\n\n\{msg1}:'

Signed-off-by: Damian Wrobel <dwrobel@ertelnet.rybnik.pl>

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>001.012 2023 Dec 12</u></b>
+<ul style="margin:0;">
+  <li>fix invalid escape sequences</li>
+</ul>
+
 <br><b><u>001.011 2023 Nov 16</u></b>
 <ul style="margin:0;">
   <li>convert project to f strings</li>
