--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>001.014 2023 Dec 13</u></b>
+<ul style="margin:0;">
+  <li>fix string formatting</li>
+</ul>
+
 <br><b><u>001.013 2023 Dec 13</u></b>
 <ul style="margin:0;">
   <li>fix parsing linuxcnc version</li>
