--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,12 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>001.015 2023 Dec 23</u></b>
+<ul style="margin:0;">
+  <li>change runcritical to cutcritical</li>
+  <li>add cutcritical check to manual and single cut sequences</li>
+</ul>
+
 <br><b><u>001.014 2023 Dec 13</u></b>
 <ul style="margin:0;">
   <li>fix string formatting</li>
