qtplasmac: fix conversational triangle
add missing equations for side/angle/side triangle and side/side/side triangle.

improve error checking

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>236.302 2024 Jan 15</u></b>
+<ul style="margin:0;">
+  <li>fix conversational triangle</li>
+</ul>
+
 <br><b><u>236.301 2023 Dec 13</u></b>
 <ul style="margin:0;">
   <li>fix string formatting</li>
