plasmac2: fix alternate text for toggle halpin

--- a/configs/sim/axis/plasma/plasmac2/versions.html
+++ b/configs/sim/axis/plasma/plasmac2/versions.html
@@ -7,10 +7,18 @@
 <!--- ****** ADD NEXT VERSION BELOW THESE LINES ****** --->
 <!--- ****** THE MAJOR VERSION WILL ALWAYS BE 2 ****** --->
 <!--- ------------------------------------------------ --->
+<br><b><u>v2.14</b> 2024 Jan 15</u>
+<ul style="margin:0;">
+  <li>fix alternate text for toggle halpin</li>
+  <li>add runcritical toggle pins to manual cut</li>
+  <li>allow "cutcritical" from qtplasmac configs</li>
+  <li>stop using auto preview in conversational</li>
+</ul>
+
 <br><b><u>v2.13</b> 2023 Nov 05</u>
 <ul style="margin:0;">
   <li>add dual code user button</li>
-  <li>allow alternate text on toggle halpin buttonq</li>
+  <li>allow alternate text on toggle halpin buttons</li>
   <li>make dro overlay transparent</li>
   <li>fix help/about text</li>
   <li>allow negative x/y pierce offsets</li>
