--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>002.017 2024 Jan 30</u></b>
+<ul style="margin:0;">
+  <li>move user_m_files to nc_files/plasmac/m_files</li>
+</ul>
+
 <br><b><u>001.016 2024 Jan 15</u></b>
 <ul style="margin:0;">
   <li>fix conversational triangle</li>
