plasmac2: set user_m_path to include /nc_files/plasmac/m_files

--- a/configs/sim/axis/plasma/plasmac2/versions.html
+++ b/configs/sim/axis/plasma/plasmac2/versions.html
@@ -7,6 +7,13 @@
 <!--- ****** ADD NEXT VERSION BELOW THESE LINES ****** --->
 <!--- ****** THE MAJOR VERSION WILL ALWAYS BE 2 ****** --->
 <!--- ------------------------------------------------ --->
+<br><b><u>v2.15</b> 2024 Jan 30</u>
+<ul style="margin:0;">
+  <li>set user_m_path to include /nc_files/plasmac/m_files</li>
+  <li>reset moving pierce on program end</li>
+  <li>make offsets_text a function</li>
+</ul>
+
 <br><b><u>v2.14</b> 2024 Jan 15</u>
 <ul style="margin:0;">
   <li>fix alternate text for toggle halpin</li>
