qtplasmac: add gcode magic word for tube cutting

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,10 +26,22 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>003.018 2024 Feb 02</u></b>
+<ul style="margin:0;">
+  <li>add sixth axis</li>
+  <li>add gcode magic word for tube cutting</li>
+</ul>
+
 <br><b><u>002.017 2024 Jan 30</u></b>
 <ul style="margin:0;">
   <li>move user_m_files to nc_files/plasmac/m_files</li>
 </ul>
+
+<br><b><u>002.016 2024 Jan 25</u></b>
+<ul style="margin:0;">
+  <li>add moving pierce</li>
+</ul>
+Changes submitted by James Walker (joco-nz)
 
 <br><b><u>001.016 2024 Jan 15</u></b>
 <ul style="margin:0;">
