plasmac guis: disable g92 offsets

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>003.019 2024 Feb 03</u></b>
+<ul style="margin:0;">
+  <li>disable g92 offsets</li>
+</ul>
+
 <br><b><u>003.018 2024 Feb 02</u></b>
 <ul style="margin:0;">
   <li>add sixth axis</li>
