--- a/configs/sim/axis/plasma/plasmac2/versions.html
+++ b/configs/sim/axis/plasma/plasmac2/versions.html
@@ -7,6 +7,11 @@
 <!--- ****** ADD NEXT VERSION BELOW THESE LINES ****** --->
 <!--- ****** THE MAJOR VERSION WILL ALWAYS BE 2 ****** --->
 <!--- ------------------------------------------------ --->
+<br><b><u>v2.16</b> 2024 Feb 03</u>
+<ul style="margin:0;">
+  <li>disable g92 offsets</li>
+</ul>
+
 <br><b><u>v2.15</b> 2024 Jan 30</u>
 <ul style="margin:0;">
   <li>set user_m_path to include /nc_files/plasmac/m_files</li>
