qtplasmac: reset moving pierce to zero on abort

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,12 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>003.021 2024 Feb 03</u></b>
+<ul style="margin:0;">
+  <li>reset moving pierce to zero on abort</li>
+  <li>ensure-m190-exists-in-user_m_path</li>
+</ul>
+
 <br><b><u>003.020 2024 Feb 03</u></b>
 <ul style="margin:0;">
   <li>rework bounds checking</li>
