--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>236.303 2024 Feb 16</u></b>
+<ul style="margin:0;">
+  <li>fix missing g64 value in run from line</li>
+</ul>
+
 <br><b><u>236.302 2024 Jan 15</u></b>
 <ul style="margin:0;">
   <li>fix conversational triangle</li>
