qtplasmac: filter X and Y pierce points separately
This is necessary to prevent a crash when G00 moves have only X or Y coordinates

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,12 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>003.024 2024 Feb 19</u></b>
+<ul style="margin:0;">
+  <li>filter X and Y pierce points separately
+  </li>
+</ul>
+
 <br><b><u>003.023 2024 Feb 17</u></b>
 <ul style="margin:0;">
   <li>fix missing g64 value in run from line
