qtplasmac: run from line fixes
remove additional M66 line
fix G21 test
allow for space after G53

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,15 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>237.304 2024 Feb 22</u></b>
+<ul style="margin:0;">
+  <li>manual cut: fix abort state</li>
+  <li>cut recovery: fix state when offsets are reset</li>
+  <li>run from line: remove additional M66 line</li>
+  <li>run from line: fix G21 test</li>
+  <li>run from line: allow for space after G53</li>
+</ul>
+
 <br><b><u>236.303 2024 Feb 16</u></b>
 <ul style="margin:0;">
   <li>fix missing g64 value in run from line</li>
