--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>237.305 2024 Feb 25</u></b>
+<ul style="margin:0;">
+  <li>fix gcode filter spotting coordinates when overburn is active</li>
+</ul>
+
 <br><b><u>237.305 2024 Feb 24</u></b>
 <ul style="margin:0;">
   <li>allow Z DRO to display torch height in manual cut</li>
