qtplasmac: fix matl overlay for locales that use a comma as a decimal

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>237.308 2024 Feb 28</u></b>
+<ul style="margin:0;">
+  <li>fix matl overlay for locales that use a comma as a decimal</li>
+</ul>
+
 <br><b><u>237.307 2024 Feb 25</u></b>
 <ul style="margin:0;">
   <li>add translation for tool type</li>
