qtplasmac: fix table view position for all machine coordinates

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,9 +26,14 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>237.309 2024 Mar 05</u></b>
+<ul style="margin:0;">
+  <li>fix table view position for all machine coordinates</li>
+</ul>
+
 <br><b><u>237.308 2024 Feb 28</u></b>
 <ul style="margin:0;">
-  <li>fix matl overlay for locales that use a comma as a decimal</li>
+  <li>fix material overlay for locales that use a comma as a decimal</li>
 </ul>
 
 <br><b><u>237.307 2024 Feb 25</u></b>
