plasmac2: fix table view for all coordinates

--- a/configs/sim/axis/plasma/plasmac2/versions.html
+++ b/configs/sim/axis/plasma/plasmac2/versions.html
@@ -7,6 +7,13 @@
 <!--- ****** ADD NEXT VERSION BELOW THESE LINES ****** --->
 <!--- ****** THE MAJOR VERSION WILL ALWAYS BE 2 ****** --->
 <!--- ------------------------------------------------ --->
+<br><b><u>v2.18</b> 2024 Mar 15</u>
+<ul style="margin:0;">
+  <li>fix table view for all coordinates</li>
+  <li>add materials to conversational preview</li>
+  <li>add clear program to file menu</li>
+</ul>
+
 <br><b><u>v2.17</b> 2024 Feb 05</u>
 <ul style="margin:0;">
   <li>fix file reload</li>
