--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>238.310 2024 Mar 21</u></b>
+<ul style="margin:0;">
+  <li>fix missing error message for invalid parameter in temporary material</li>
+</ul>
+
 <br><b><u>238.309 2024 Mar 15</u></b>
 <ul style="margin:0;">
   <li>prevent torch hitting material during offset probing</li>
