qtplasmac: use real USER_M_PATH in package configs

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>005.032 2024 Mar 24</u></b>
+<ul style="margin:0;">
+  <li>use real USER_M_PATH in package configs</li>
+</ul>
+
 <br><b><u>005.031 2024 Mar 21</u></b>
 <ul style="margin:0;">
   <li>fix missing error message for invalid parameter in temporary material</li>
