plasmac2: use real USER_M_PATH in package configs

--- a/configs/sim/axis/plasma/plasmac2/versions.html
+++ b/configs/sim/axis/plasma/plasmac2/versions.html
@@ -7,6 +7,11 @@
 <!--- ****** ADD NEXT VERSION BELOW THESE LINES ****** --->
 <!--- ****** THE MAJOR VERSION WILL ALWAYS BE 2 ****** --->
 <!--- ------------------------------------------------ --->
+<br><b><u>v2.19</b> 2024 Mar 24</u>
+<ul style="margin:0;">
+  <li>use real USER_M_PATH in package configs</li>
+</ul>
+
 <br><b><u>v2.18</b> 2024 Mar 15</u>
 <ul style="margin:0;">
   <li>fix table view for all coordinates</li>
