qtplasmac: check for valid default material

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>238.311 2024 Mar 30</u></b>
+<ul style="margin:0;">
+  <li>check for valid default material</li>
+</ul>
+
 <br><b><u>238.310 2024 Mar 21</u></b>
 <ul style="margin:0;">
   <li>fix missing error message for invalid parameter in temporary material</li>
