qtplasmac: fix button interlock, remove unused variables

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,12 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>238.312 2024 Apr 9</u></b>
+<ul style="margin:0;">
+  <li>fix button interlock when bounds error is present</li>
+  <li>remove unused variables</li>
+</ul>
+
 <br><b><u>238.311 2024 Mar 30</u></b>
 <ul style="margin:0;">
   <li>check for valid default material</li>
