qtplasmac: fix g-code filter retrieval of pierce points

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>005.035 2024 Apr 10</u></b>
+<ul style="margin:0;">
+  <li>fix g-code filter retrieval of pierce points</li>
+</ul>
+
 <br><b><u>005.034 2024 Apr 9</u></b>
 <ul style="margin:0;">
   <li>fix button interlock when bounds error is present</li>
