qtplasmac: fix button_normal "pressed" color

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>238.313 2024 Apr 14</u></b>
+<ul style="margin:0;">
+  <li>fix button_normal "pressed" color</li>
+</ul>
+
 <br><b><u>238.312 2024 Apr 9</u></b>
 <ul style="margin:0;">
   <li>fix button interlock when bounds error is present</li>
