qtplasmac: add laser dry run without probing add single cutpath to run from line

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,12 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>006.037 2024 Apr 20</u></b>
+<ul style="margin:0;">
+  <li>add laser dry run without probing</li>
+  <li>add single cutpath to run from line</li>
+</ul>
+
 <br><b><u>005.036 2024 Apr 14</u></b>
 <ul style="margin:0;">
   <li>fix button_normal "pressed" color</li>
