qtplasmac: enhance tab key usage
Enhances the use of the tab key on the conversational, settings, and parameters tabs.  Tabbing purposely limited to cells which can accept input via the keyboard.

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>006.039 2024 Apr 21</u></b>
+<ul style="margin:0;">
+  <li>enhance tab key usage</li>
+</ul>
+
 <br><b><u>006.038 2024 Apr 21</u></b>
 <ul style="margin:0;">
   <li>conv_polygon fix variable name</li>
