qtplasmac: change focusPolicy from NoFocus to ClickFocus
It seems that when this is implemented programatically, it does not always obey and sometimes the button will stay highlighted when it shouldn't.  Changing to ClickFocus provides the desired results and is a work around for what seems like a Qt bug. Changing the .ui files for consistency.

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>006.040 2024 Apr 21</u></b>
+<ul style="margin:0;">
+  <li>change focusPolicy from NoFocus to ClickFocus</li>
+</ul>
+
 <br><b><u>006.039 2024 Apr 21</u></b>
 <ul style="margin:0;">
   <li>enhance tab key usage</li>
