qtplasmac: simplify and enhance color changing for user buttons

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,12 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>006.041 2024 Apr 25</u></b>
+<ul style="margin:0;">
+  <li>simplify and enhance color changing for user buttons</li>
+  <li>fix odd cursor behavior when editing text in conversational</li>
+</ul>
+
 <br><b><u>006.040 2024 Apr 21</u></b>
 <ul style="margin:0;">
   <li>change focusPolicy from NoFocus to ClickFocus</li>
