qtplasmac: get conversational block pierce points

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>006.042 2024 Apr 27</u></b>
+<ul style="margin:0;">
+  <li>calculate pierce points in conversational blocks</li>
+</ul>
+
 <br><b><u>006.041 2024 Apr 25</u></b>
 <ul style="margin:0;">
   <li>simplify and enhance color changing for user buttons</li>
