plasmac2: change conversational tab order
make conversational tab order more consistent with qtplasmac

--- a/configs/sim/axis/plasma/plasmac2/versions.html
+++ b/configs/sim/axis/plasma/plasmac2/versions.html
@@ -7,6 +7,13 @@
 <!--- ****** ADD NEXT VERSION BELOW THESE LINES ****** --->
 <!--- ****** THE MAJOR VERSION WILL ALWAYS BE 2 ****** --->
 <!--- ------------------------------------------------ --->
+<br><b><u>v2.20</b> 2024 May 01</u>
+<ul style="margin:0;">
+  <li>add single cutpath to run from line</li>
+  <li>add dry run button and dry run without probing</li>
+  <li>make conversational tab order more consistent with qtplasmac</li>
+</ul>
+
 <br><b><u>v2.19</b> 2024 Mar 24</u>
 <ul style="margin:0;">
   <li>use real USER_M_PATH in package configs</li>
