Update plasmac.comp to include laser_mode for fiber lasers
Added a laser_mode input pin for fiber lasers

-Allows THC to always be active if laser_mode is enabled. Even during dry runs or if current velocity is lower than 0.999% commanded velocity

Update qtplasmac_handler.py version

Update versions.html

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>007.042 2024 May 3</u></b>
+<ul style="margin:0;">
+  <li>add laser_mode input pin for fiber laser use to plasmac.comp</li>
+</ul>
+    
 <br><b><u>006.042 2024 Apr 27</u></b>
 <ul style="margin:0;">
   <li>calculate pierce points in conversational blocks</li>
