qtplasmac: reinstate different grid sizes
preview and conversational may have different grid sizes

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -9,7 +9,7 @@
 </style>
 </head>
 <body>
-<b>Version Numbering  <font color="green">nnn</font>.<font color="blue">nnn</font></b>
+<b>Version Numbering <font color="green">nnn</font>.<font color="blue">nnn</font></b>
 <table>
     <tr>
         <th>Number</th>
@@ -26,11 +26,16 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>007.043 2024 May 3</u></b>
+<ul style="margin:0;">
+  <li>reinstate different grid sizes for preview and conversational</li>
+</ul>
+
 <br><b><u>007.042 2024 May 3</u></b>
 <ul style="margin:0;">
   <li>add laser_mode input pin for fiber laser use to plasmac.comp</li>
 </ul>
-    
+
 <br><b><u>006.042 2024 Apr 27</u></b>
 <ul style="margin:0;">
   <li>calculate pierce points in conversational blocks</li>
