qtplasmac: align component bounds check with gui bounds check

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>008.043 2024 May 4</u></b>
+<ul style="margin:0;">
+  <li>align component bounds check with gui bounds check</li>
+</ul>
+
 <br><b><u>007.043 2024 May 3</u></b>
 <ul style="margin:0;">
   <li>reinstate different grid sizes for preview and conversational</li>
