--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,12 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>008.044 2024 May 21</u></b>
+<ul style="margin:0;">
+  <li>make all bounds check errors congruent</li>
+  <li>PEP 8/linter housekeeping</li>
+</ul>
+
 <br><b><u>008.043 2024 May 4</u></b>
 <ul style="margin:0;">
   <li>align component bounds check with gui bounds check</li>
