qtplasmac: fix run from line temp material error

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>008.045 2024 May 28</u></b>
+<ul style="margin:0;">
+  <li>fix run from line temporary material error</li>
+</ul>
+
 <br><b><u>008.044 2024 May 21</u></b>
 <ul style="margin:0;">
   <li>make all bounds check errors congruent</li>
