qtplasmac:  add control buttons to conversational preview

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>008.046 2024 June 5</u></b>
+<ul style="margin:0;">
+  <li>add control buttons to conversational preview</li>
+</ul>
+
 <br><b><u>008.045 2024 May 28</u></b>
 <ul style="margin:0;">
   <li>fix run from line temporary material error</li>
