--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>008.048 2024 Aug 21</u></b>
+<ul style="margin:0;">
+  <li>remove work around for pyqt5.11 not having setTabVisible</li>
+</ul>
+
 <br><b><u>008.047 2024 Aug 21</u></b>
 <ul style="margin:0;">
   <li>fix file load after single cut</li>
