qtplasmac: fix m_code pathing
Fixes the m_code path for a package install sim.
Allows update 001-017 to be applied correctly for configs that were build prior to then.

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,12 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>008.050 2024 Sept 6</u></b>
+<ul style="margin:0;">
+  <li>fix sim m_code pathing</li>
+  <li>allow update 001-017 to be correctly applied</li>
+</ul>
+
 <br><b><u>008.049 2024 Sept 2</u></b>
 <ul style="margin:0;">
   <li>process element names for custom stylesheets as well</li>
