qtplasmac: fix button setup logic and error message

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,12 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>008.051 2024 Oct 2</u></b>
+<ul style="margin:0;">
+  <li>fix button setup logic and error message</li>
+  <li>update for latest opengl libraries added in commit 8c68df8</li>
+</ul>
+
 <br><b><u>008.050 2024 Sept 6</u></b>
 <ul style="margin:0;">
   <li>fix sim m_code pathing</li>
