--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>008.052 2024 Oct 4</u></b>
+<ul style="margin:0;">
+  <li>make ext_pause only pause the machine (no resume)</li>
+</ul>
+
 <br><b><u>008.051 2024 Oct 2</u></b>
 <ul style="margin:0;">
   <li>fix button setup logic and error message</li>
