--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,13 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>008.053 2024 Oct 11</u></b>
+<ul style="margin:0;">
+  <li>revert change in 008.052 (commit cbfe160)</li>
+  <li>add ext_pause_only, add ext_resume</li>
+  <li>add missing calls to the pause_pressed method</li>
+</ul>
+
 <br><b><u>008.052 2024 Oct 4</u></b>
 <ul style="margin:0;">
   <li>make ext_pause only pause the machine (no resume)</li>
