qtplasmac:  fix tooltip variable name missed in 008.053 (commit bb07323)

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>008.054 2024 Nov 5</u></b>
+<ul style="margin:0;">
+  <li>fix tooltip variable name missed in 008.053 (commit bb07323)</li>
+</ul>
+
 <br><b><u>008.053 2024 Oct 11</u></b>
 <ul style="margin:0;">
   <li>revert change in 008.052 (commit cbfe160)</li>
