--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>008.055 2024 Nov 26</u></b>
+<ul style="margin:0;">
+  <li>fix linking and documentation for internationalization</li>
+</ul>
+
 <br><b><u>008.054 2024 Nov 5</u></b>
 <ul style="margin:0;">
   <li>fix tooltip variable name missed in 008.053 (commit bb07323)</li>
