qtplasmac: fix paths in langlink file

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>008.056 2024 Nov 30</u></b>
+<ul style="margin:0;">
+  <li>fix paths in langlink file</li>
+</ul>
+
 <br><b><u>008.055 2024 Nov 26</u></b>
 <ul style="margin:0;">
   <li>fix linking and documentation for internationalization</li>
