qtplasmac:  align button code handling with docs
Previously, a pushed button's code was checked for "load" in the button code and trying to call a subroutine that had "load" in the file name was not possible since it conflicted with the "load" button code.  Now with exception of "toggle-laser" the button code is checked using "startswith()".

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,12 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>008.057 2025 Mar 07</u></b>
+<ul style="margin:0;">
+  <li>some more Fille Clear clean up from commit 40e4a23</li>
+  <li>align button code handling with docs</li>
+</ul>
+
 <br><b><u>008.056 2024 Nov 30</u></b>
 <ul style="margin:0;">
   <li>fix paths in langlink file</li>
