qtplasmac: apply GUI styling to User Manual

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,9 +26,15 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>008.058 2025 Mar 12</u></b>
+<ul style="margin:0;">
+  <li>fix docs URL for Master branch</li>
+  <li>apply GUI styling to User Manual</li>
+</ul>
+
 <br><b><u>008.057 2025 Mar 07</u></b>
 <ul style="margin:0;">
-  <li>some more Fille Clear clean up from commit 40e4a23</li>
+  <li>some more File Clear clean up from commit 40e4a23</li>
   <li>align button code handling with docs</li>
 </ul>
 
