qtplasmac: check for missing dependency before styling User Manual

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>008.059 2025 Mar 14</u></b>
+<ul style="margin:0;">
+  <li>check for missing dependency before styling User Manual</li>
+</ul>
+
 <br><b><u>008.058 2025 Mar 12</u></b>
 <ul style="margin:0;">
   <li>fix docs URL for Master branch</li>
