qtplasmac: update sim styling with GUI styling changes

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,16 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>008.060 2025 Mar 16</u></b>
+<ul style="margin:0;">
+  <li>update sim styling with GUI styling changes</li>
+  <li>make sim styling match GUI</li>
+  <li>set sim button focus policy to noFocus</li>
+  <li>apply style changes to preview stack related buttons, and user manual</li>
+  <li>fix some button interlocking</li>
+  <li>ensure laser button is enabled before allowing ext or keybard calls to it</li>
+</ul>
+
 <br><b><u>008.059 2025 Mar 14</u></b>
 <ul style="margin:0;">
   <li>check for missing dependency before styling User Manual</li>
