qtplasmac:  sim panel add styling to Mode 2 buttons

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>008.061 2025 Mar 16</u></b>
+<ul style="margin:0;">
+  <li>sim panel add styling to Mode 2 buttons</li>
+</ul>
+
 <br><b><u>008.060 2025 Mar 16</u></b>
 <ul style="margin:0;">
   <li>update sim styling with GUI styling changes</li>
