qtplasmac:  remove gcodegraphics patch
The patch is no longer necessary as c-morley moved this to glcanon with commit a13109e to apply this change to other GUIs.

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,12 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>008.063 2025 May 02</u></b>
+<ul style="margin:0;">
+  <li>remove gcodegraphics patch</li>
+  <li>prepare docs url for when master releases</li>
+</ul>
+
 <br><b><u>008.062 2025 Mar 29</u></b>
 <ul style="margin:0;">
   <li>add header to configuration messages</li>
