qtplasmac: squish some conversational block bugs
remove material drop down from conversation block in all instances
leave conversational block if new or clear was clicked

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,12 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>008.064 2025 May 18</u></b>
+<ul style="margin:0;">
+  <li>remove material drop down from conversation block in all instances</li>
+  <li>leave conversational block if new or clear was clicked</li>
+</ul>
+
 <br><b><u>008.063 2025 May 02</u></b>
 <ul style="margin:0;">
   <li>remove gcodegraphics patch</li>
