qtplasmac: update versioning file

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,14 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>008.065 2025 June 06</u></b>
+<ul style="margin:0;">
+  <li>start conversational shapes at origin</li>
+  <li>uppercase conversational</li>
+  <li>adaptive feed consistancy
+  <li>conversational block refactor</li>
+</ul>
+
 <br><b><u>008.064 2025 May 18</u></b>
 <ul style="margin:0;">
   <li>remove material drop down from conversation block in all instances</li>
