qtplasmac: misshaped conversational rectangle
conversational rectangles were misshaped when internal and  angl

Signed-off-by: Phillip Carter <phillc54@users.noreply.github.com>

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>008.066 2025 June 19</u></b>
+<ul style="margin:0;">
+  <li>fix misshaped conversational internal angled rectangles</li>
+</ul>
+
 <br><b><u>008.065 2025 June 06</u></b>
 <ul style="margin:0;">
   <li>start conversational shapes at origin</li>
