qtplasmac: clicking notification background stops error blink, add icon to notification box

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>008.067 2025 June 28</u></b>
+<ul style="margin:0;">
+  <li>allow clicking error notification background to stop error blinking</li>
+  <li>add dialog-error icon to error notification box</li>
+
 <br><b><u>008.066 2025 June 19</u></b>
 <ul style="margin:0;">
   <li>fix misshaped conversational internal angled rectangles</li>
